<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/alarm_text"
        style="@style/text_regular_18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30.7dp"
        android:drawableLeft="@drawable/clock"
        android:drawablePadding="8.7dp"
        android:gravity="left"
        android:textAllCaps="true"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/hour_container"
        android:layout_width="match_parent"
        android:layout_height="119.7dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal">

        <TextClock
            style="@style/text_thin_90sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:format12Hour="@string/big_clock_12_hours_format"
            android:format24Hour="@string/big_clock_24_hours_format"
            android:gravity="left"
            android:includeFontPadding="false" />

        <TextView
            android:id="@+id/ampm_text"
            style="@style/text_thin_34sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:gravity="left"
            android:includeFontPadding="false"
            android:singleLine="true" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56.3dp"
        android:layout_marginLeft="31.33dp"
        android:layout_marginTop="113.8dp">

        <TextClock
            style="@style/text_regular_bold_48sp"
            android:id="@+id/day_of_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:format12Hour="@string/day_number_format"
            android:format24Hour="@string/day_number_format"
            android:includeFontPadding="false"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/day_of_month"
            android:layout_marginLeft="6.67dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/month_year"
                android:orientation="horizontal">

                <TextClock
                    style="@style/text_medium_16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:format12Hour="@string/month_format"
                    android:format24Hour="@string/month_format"
                    android:gravity="left"
                    android:includeFontPadding="false"
                    android:textAllCaps="true" />

                <TextClock
                    style="@style/text_light_16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:format12Hour="@string/year_format"
                    android:format24Hour="@string/year_format"
                    android:gravity="left"
                    android:includeFontPadding="false"
                    android:paddingLeft="@dimen/clock_padding"
                    android:textAllCaps="true" />
            </LinearLayout>

            <TextClock
                style="@style/text_regular_bold_22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/month_year"
                android:layout_marginTop="-2.7dp"
                android:format12Hour="@string/day_name_format"
                android:format24Hour="@string/day_name_format"
                android:gravity="left"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:textAllCaps="true" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/clock_edit_button"
        style="@style/text_condensed_bold_italic_18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_states_blue"
        android:ellipsize="end"
        android:layout_marginTop="136.9dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/edit" />

    <!-- GUIDELINES -->
    <!--<LinearLayout
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@android:color/holo_green_light"
        android:layout_alignTop="@id/clock_edit_button"
        android:orientation="horizontal"/>
    <LinearLayout
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@android:color/holo_green_light"
        android:layout_alignBaseline="@id/clock_edit_button"
        android:orientation="horizontal"/>
    <LinearLayout
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@android:color/holo_green_light"
        android:layout_alignBottom="@id/clock_edit_button"
        android:orientation="horizontal"/>-->
</RelativeLayout>
