<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <TextView
        style="@style/text_light_21sp"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="23.67dp"
        android:gravity="left"
        android:includeFontPadding="false"
        android:paddingLeft="31dp"
        android:text="@string/your_fairphone_for" />

    <LinearLayout
        android:id="@+id/eleapsed_years_container"
        android:layout_width="match_parent"
        android:layout_height="46.67dp"
        android:orientation="horizontal"
        android:paddingLeft="31dp"
        android:layout_marginTop="30.45dp">

        <TextView
            android:id="@+id/eleapsed_years_text"
            style="@style/text_regular_bold_45sp"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:includeFontPadding="false"
            android:paddingRight="3dp"
            android:text="02" />

        <TextView
            android:id="@+id/years_text"
            style="@style/text_condensed_bold_45sp"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:includeFontPadding="false"
            android:text="@string/years" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/eleapsed_months_container"
        android:layout_width="match_parent"
        android:layout_height="46.67dp"
        android:orientation="horizontal"
        android:paddingLeft="31dp"
        android:layout_below="@id/eleapsed_years_container"
        android:layout_marginTop="-8.67dp">

        <TextView
            android:id="@+id/eleapsed_months_text"
            style="@style/text_regular_bold_45sp"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:includeFontPadding="false"
            android:paddingRight="3dp"
            android:text="07" />

        <TextView
            android:id="@+id/months_text"
            style="@style/text_condensed_bold_45sp"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:includeFontPadding="false"
            android:text="@string/months" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/eleapsed_days_container"
        android:layout_width="match_parent"
        android:layout_height="46.67dp"
        android:orientation="horizontal"
        android:paddingLeft="31dp"
        android:layout_below="@id/eleapsed_months_container"
        android:layout_marginTop="-8.67dp">

        <TextView
            android:id="@+id/eleapsed_days_text"
            style="@style/text_regular_bold_45sp"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:includeFontPadding="false"
            android:paddingRight="3dp"
            android:text="15" />

        <TextView
            android:id="@+id/days_text"
            style="@style/text_condensed_bold_45sp"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:includeFontPadding="false"
            android:text="@string/days" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/yours_since_share_button"
        android:layout_width="84.67dp"
        android:layout_height="32dp"
        android:background="@drawable/button_states_blue"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="121.45dp"
        android:layout_alignParentRight="true">
        <TextView
            style="@style/text_condensed_bold_italic_18sp"
            android:textSize="17.67dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_gravity="center_vertical"
            android:text="@string/share"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:src="@drawable/share_icon"/>
    </FrameLayout>
</RelativeLayout>